--- a/index.html
+++ b/index.html
@@ -22,70 +22,13 @@
             </button>
         </div>
         <div class="auth-buttons" id="authButtons">
-            <button class="auth-btn login-btn" onclick="showLoginModal()">
-                <i class="fas fa-sign-in-alt"></i> Đăng nhập
-            </button>
-            <button class="auth-btn register-btn" onclick="showRegisterModal()">
-                <i class="fas fa-user-plus"></i> Đăng ký
-            </button>
+            <a href="login.html" class="auth-btn">
+                <i class="fas fa-user"></i> Đăng nhập
+            </a>
         </div>
     </div>
 
-    <!-- Login Modal -->
-    <div class="modal" id="loginModal">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h3>Đăng nhập</h3>
-                <span class="close" onclick="closeModal('loginModal')">&times;</span>
-            </div>
-            <div class="modal-body">
-                <form id="loginForm">
-                    <div class="form-group">
-                        <label>Tên đăng nhập hoặc Email:</label>
-                        <input type="text" id="loginUsername" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Mật khẩu:</label>
-                        <input type="password" id="loginPassword" required>
-                    </div>
-                    <button type="submit" class="form-btn">Đăng nhập</button>
-                    <p class="form-switch">
-                        Chưa có tài khoản? <a href="#" onclick="switchToRegister()">Đăng ký ngay</a>
-                    </p>
-                </form>
-            </div>
-        </div>
-    </div>
 
-    <!-- Register Modal -->
-    <div class="modal" id="registerModal">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h3>Đăng ký tài khoản</h3>
-                <span class="close" onclick="closeModal('registerModal')">&times;</span>
-            </div>
-            <div class="modal-body">
-                <form id="registerForm">
-                    <div class="form-group">
-                        <label>Tên đăng nhập:</label>
-                        <input type="text" id="registerUsername" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Email:</label>
-                        <input type="email" id="registerEmail" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Mật khẩu:</label>
-                        <input type="password" id="registerPassword" required minlength="6">
-                    </div>
-                    <button type="submit" class="form-btn">Đăng ký</button>
-                    <p class="form-switch">
-                        Đã có tài khoản? <a href="#" onclick="switchToLogin()">Đăng nhập</a>
-                    </p>
-                </form>
-            </div>
-        </div>
-    </div>
 
     <header class="hero-header">
         <div class="header-content">
