--- a/login.html
+++ b/login.html
@@ -77,8 +77,8 @@
                         
                         <form id="loginForm" class="modern-form">
                             <div class="modern-input-group">
-                                <input type="text" id="loginUsername" placeholder="Email" required>
-                                <i class="fas fa-envelope input-icon"></i>
+                                <input type="text" id="loginUsername" placeholder="Username or Email" required>
+                                <i class="fas fa-user input-icon"></i>
                             </div>
                             <div class="modern-input-group">
                                 <input type="password" id="loginPassword" placeholder="Password" required>
